# python-web_hw_07

./: README.md  config.ini  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 1c4c2602fe07_init.py
src/: db.py  models.py
