[tool.poetry]
name = "python-web-hw-07"
version = "0.1.0"
description = ""
authors = ["Vadim Marenko <vadim.marenko@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "python_web_hw_07"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.5"
faker = "^19.6.2"
alembic = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"